feat: get music link endpoint
